Closed
Bug 1399905
Opened 9 years ago
Closed 9 years ago
Update cubeb from upstream to 09a90a7
Categories
(Core :: Audio/Video: cubeb, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox57 | --- | fixed |
People
(Reporter: achronop, Assigned: achronop)
References
Details
Attachments
(1 file)
|
6.18 KB,
patch
|
jesup
:
review+
|
Details | Diff | Splinter Review |
Pick commit:
09a90a7 Alex Chronopoulos audiounit: reinit stream on DataSource event (Bug 1398788) (#356)
| Assignee | ||
Updated•9 years ago
|
| Assignee | ||
Comment 1•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/29713567c35d87d08c5d755712763b15c672208f
Bug 1399905 - Update cubeb from upstream to 09a90a7. r=padenot
Pushed by achronop@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/29713567c35d
Update cubeb from upstream to 09a90a7. r=padenot
Comment 3•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox57:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
| Assignee | ||
Comment 4•9 years ago
|
||
Attachment #8908736 -
Flags: review?(jib)
Updated•9 years ago
|
Attachment #8908736 -
Flags: review?(jib) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8908736 [details] [diff] [review]
Bug 1399905 - Uplift part of 09a90a7 of cubeb upstream.
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1366707
[User impact if declined]: deadlock when plug/unplug earpods on mac
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: yes
1. Go to https://mozilla.github.io/webrtc-landing/gum_test.html
2. Click Audio&Video
3. Accept the default device (build in) for audio and video.
4. Plug and unplug 3.5 mm Apple Ear Pod repeatable (on debug under debugger about 20 times on optimized build sooner).
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: No, it's already working in Nightly
[Why is the change risky/not risky?]: Small patch with small impact on the flow, affects only the case that earpods are plug or unplug on mac
[String changes made/needed]:
Attachment #8908736 -
Flags: approval-mozilla-release?
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8908736 [details] [diff] [review]
Bug 1399905 - Uplift part of 09a90a7 of cubeb upstream.
I recall the request due to Bug 1400465
Attachment #8908736 -
Flags: approval-mozilla-release?
You need to log in
before you can comment on or make changes to this bug.
Description
•